tests/NormalTests/paczka1/fuzzy1/17943741.err
Error in line 1: IShffCaR S181 29,8
Error in line 5: 4kL5qcT30cL S333 77,94
Error in line 4: 4kL5qcT30cL S181 75,8
Error in line 7: 4kL5qcT30cL A294 41,9
Error in line 19: BhRE S181 -1,0
Error in line 20: yh4iqSn A294 36,97
Error in line 17: yh4iqSn A294 38,2
Error in line 21: yh4iqSn S181 72,5
Error in line 32: JPgMSb A294 42,1
